Correction du contraste

--- a/assets/style.css
+++ b/assets/style.css
@@ -69,8 +69,8 @@ nav a {
 }
 
 .picture img {
-    width: 500px;
-    height: 500px;
+    width: 400px;
+    height: 400px;
 }
 #about-me {
 	flex: 2
@@ -104,7 +104,7 @@ nav a {
 }
 .nav-pills .nav-link.active, .nav-pills .show > .nav-link {
 	color: #fff;
-	background-color: #BEB45A;
+	background-color: #887600;
 	border-radius:0 ;
 }
 .nav-pills .nav-link {
@@ -194,7 +194,7 @@ nav a {
 
 #contact {
 	margin: auto;
-	background-color: #D8D3A8 ;
+	background-color: rgba(136,118,0, 0.3);
 	position: relative;
 	padding-inline: 100px;
 	padding-block: 100px;
@@ -203,9 +203,13 @@ nav a {
 #contact .container {
 	display: flex;
 }
+#contact .picture.right {
+    text-align: right;
+    margin-right: 0;
+}
 .picture.right::before {
 	content: ' ';
-	background-color: #BEB45A;
+	background-color: #887600;
 	width: 374px;
 	height: 329px;
 	position: absolute;
@@ -220,7 +224,6 @@ nav a {
 form {
 	display: flex;
 	flex-direction: column;
-	width: 70%;
 	align-items: flex-start;
 }
 
@@ -242,7 +245,9 @@ form textarea {
 	margin-bottom: 20px;
 }
 input[type="submit"] {
-	background-color: #BEB45A;
+	background-color: #887600;
+    color: white;
+    border: none;
 	padding: .5em 1em
 }
 
@@ -260,21 +265,12 @@ input[type="submit"] {
 	#about-me h6, #about-me p {
 		width: 100%;
 	}
-    .picture img {
-        width: 500px;
-        height: 500px;
-    }
 }
 
 @media all and (max-width: 1000px) {
 	#about{
 		flex-direction: column;
-
 	}
-    .picture img {
-        width: 400px;
-        height: 400px;
-    }
 	.picture.left::before {
 		width: 100%;
 		height: 30%;
@@ -314,7 +310,7 @@ input[type="submit"] {
 		flex-direction: column;
 	}
 	#contact .picture.right {
-		margin-top: 1em;
+		margin: 1em 0 0 0;
 	}
 	.picture.right::before {
 		width: 100%;
@@ -344,7 +340,7 @@ input[type="submit"] {
 		height: 150px;
 	}
     .picture img {
-        max-width: 500px;
+        max-width: 400px;
         width: 100%;
         height: auto;
     }
@@ -363,6 +359,7 @@ input[type="submit"] {
 	}
 	.picture {
 		width: 80%;
+        text-align: center;
 	}
 }
 
